fix compiler errors in model package