@@ -5,10 +5,10 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import epd.io.conversion.Dom;
-import epd.io.conversion.Vocab;
-import epd.util.Strings;
 import org.openlca.ilcd.commons.Other;
+import org.openlca.ilcd.epd.conversion.Dom;
+import org.openlca.ilcd.epd.conversion.Vocab;
+import org.openlca.ilcd.epd.util.Strings;
 import org.openlca.ilcd.processes.AdminInfo;
 import org.openlca.ilcd.processes.Modelling;
 import org.openlca.ilcd.processes.Process;
@@ -69,8 +69,8 @@ public class QMetaData {
 				.map(q -> q.id)
 				.collect(Collectors.toSet());
 		List<QQuestion> removals = this.questions.stream()
-				.filter(q -> ids.contains(q.id))
-				.collect(Collectors.toList());
+			.filter(q -> ids.contains(q.id))
+			.toList();
 		questions.removeAll(removals);
 	}
 
@@ -90,9 +90,7 @@ public class QMetaData {
 		}
 		AdminInfo adm = Processes.getAdminInfo(p);
 		if (adm != null) {
-			QMetaData qmeta = read(adm.other);
-			if (qmeta != null)
-				return qmeta;
+			return read(adm.other);
 		}
 		return null;
 	}
